oop_mro/tests/trybuild/fail_non_virtual_abstract_method.stderr
error: unimplemented method `area` must be declared as `abstract virtual fn`
 --> tests/trybuild/fail_non_virtual_abstract_method.rs:5:12
  |
5 |         fn area(&self) -> usize;
  |            ^^^^
