oop_mro/tests/trybuild/fail_non_virtual_abstract_method.rs
use oop_mro::prelude::*;

oop_class! {
    abstract class Shape {
        fn area(&self) -> usize;
    }
}

fn main() {}
